tests/toylang/neg/001074_mutation.toylang
program a = { if a then sleep program else sleep; } .
